NEXT-3163 - update all required field with "required" property

--- a/Resources/administration/src/app/component/form/sw-confirm-field/sw-confirm-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-confirm-field/sw-confirm-field.html.twig
@@ -5,6 +5,8 @@
                 v-model="draft"
                 type="text"
                 v-bind="$attrs"
+                :required="required"
+                validation="required"
                 @focus="onStartEditing"
                 @blur="onBlurField"
                 @keyup.enter="onSubmitFromKey"
