--- a/Resources/administration/src/module/sw-mail-template/page/sw-mail-header-footer-detail/sw-mail-header-footer-detail.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/page/sw-mail-header-footer-detail/sw-mail-header-footer-detail.html.twig
@@ -48,7 +48,7 @@
                                       :placeholder="$tc('sw-mail-header-footer.detail.basic.placeholderName')"
                                       v-model="mailHeaderFooter.name"
                                       validation="required"
-                                      :required="true">
+                                      required>
                             </sw-field>
                         {% endblock %}
 
