--- a/Resources/administration/src/module/sw-mail-template/page/sw-mail-template-detail/sw-mail-template-detail.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/page/sw-mail-template-detail/sw-mail-template-detail.html.twig
@@ -50,7 +50,8 @@
                                 :label="$tc('sw-mail-template.detail.basic.labelMailType')"
                                 :placeholder="$tc('sw-mail-template.detail.basic.placeholderMailType')"
                                 @input="onMailTemplateTypeChanged"
-                                validation="required">
+                                validation="required"
+                                required>
                             </sw-select>
                         {% endblock %}
 
