--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -60,6 +60,7 @@
                                     :placeholder="placeholder(manufacturer, 'name', $tc('sw-manufacturer.detail.placeholderName'))"
                                     name="name"
                                     validation="required"
+                                    required
                                     v-model="manufacturer.name">
                                 </sw-field>
                             {% endblock %}
