--- a/Resources/administration/src/module/sw-order/component/sw-order-inline-field/sw-order-inline-field.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-inline-field/sw-order-inline-field.html.twig
@@ -2,10 +2,7 @@
     <div class = "sw-order-inline-field">
 
         <slot v-if="editable">
-            <sw-confirm-field :value="value"
-                @input="onInput">
-
-            </sw-confirm-field>
+            <sw-confirm-field :value="value" :required="required" @input="onInput"></sw-confirm-field>
         </slot>
         <span v-else >
             {{ displayValue }}
