--- a/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-basic-form/sw-product-basic-form.html.twig
@@ -37,7 +37,7 @@
                 <sw-select :store="manufacturerStore"
                            class="sw-select-product__select_manufacturer"
                            id="manufacturerId"
-                           :required="true"
+                           required
                            :placeholder="$tc('sw-product.basicForm.placeholderManufacturer')"
                            :label="$tc('sw-product.basicForm.labelManufacturer')"
                            v-model="product.manufacturerId">
