--- a/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-settings-form/sw-product-settings-form.html.twig
@@ -18,6 +18,7 @@
                                 :min="0"
                                 :label="$tc('sw-product.settingsForm.labelStock')"
                                 :placeholder="$tc('sw-product.settingsForm.placeholderStock')"
+                                required
                                 v-model="product.stock">
                         </sw-field>
                 {% endblock %}
