--- a/Resources/administration/src/module/sw-promotion/component/sw-promotion-basic-form/sw-promotion-basic-form.html.twig
+++ b/Resources/administration/src/module/sw-promotion/component/sw-promotion-basic-form/sw-promotion-basic-form.html.twig
@@ -6,6 +6,7 @@
                           :label="$tc('sw-promotion.detail.main.general.labelTitle')"
                           :placeholder="placeholder(promotion, 'name', $tc('sw-promotion.detail.main.general.placeholderName'))"
                           v-model="promotion.name"
+                          required
                           validation="required">
                 </sw-field>
             {% endblock %}
