--- a/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-base/sw-sales-channel-detail-base.html.twig
@@ -10,6 +10,7 @@
                             <sw-field
                                 type="text"
                                 validation="required"
+                                required
                                 :placeholder="placeholder(salesChannel, 'name', $tc('sw-sales-channel.detail.placeholderName'))"
                                 :label="$tc('sw-sales-channel.detail.labelInputName')"
                                 v-model="salesChannel.name">
