--- a/Resources/administration/src/module/sw-settings-custom-field/component/sw-custom-field-detail/sw-custom-field-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-custom-field/component/sw-custom-field-detail/sw-custom-field-detail.html.twig
@@ -43,6 +43,7 @@
                             :helpText="$tc('sw-settings-custom-field.customField.detail.tooltipRequired')"
                             class="sw-custom-field-detail__switch"
                             :label="$tc('sw-settings-custom-field.customField.detail.labelRequired')"
+                            required
                             v-model="required">
                     </sw-field>
                 {% endblock %}
