--- a/Resources/administration/src/module/sw-settings-customer-group/page/sw-settings-customer-group-detail/sw-settings-customer-group-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-customer-group/page/sw-settings-customer-group-detail/sw-settings-customer-group-detail.html.twig
@@ -62,6 +62,7 @@
                                           class="sw-settings-customer-group-detail__name"
                                           :label="$tc('sw-settings-customer-group.detail.fieldNameLabel')"
                                           :placeholder="placeholder(customerGroup, 'name', $tc('sw-settings-customer-group.detail.placeholderName'))"
+                                          required
                                           validation="required">
                                 </sw-field>
                             {% endblock %}
