--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-detail/sw-settings-language-detail.html.twig
@@ -55,6 +55,7 @@
                                           :label="$tc('sw-settings-language.detail.labelName')"
                                           :placeholder="$tc('sw-settings-language.detail.placeholderName')"
                                           validation="required"
+                                          required
                                           v-model="language.name">
                                 </sw-field>
                             {% endblock %}
