--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-different-addresses/sw-condition-different-addresses.html.twig
@@ -4,7 +4,7 @@
                    :id="createId()"
                    itemValueKey="value"
                    displayName="label"
-                   :required="true"
+                   required
                    :store="selectValues"
                    v-model="isDifferent"
                    class="field--main">
