--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-is-new-customer/sw-condition-is-new-customer.html.twig
@@ -5,7 +5,7 @@
                    itemValueKey="value"
                    displayName="label"
                    :store="selectValues"
-                   :required="true"
+                   required
                    v-model="isNew"
                    class="field--main">
         </sw-select>
