--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-of-type/sw-condition-line-item-of-type.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-of-type/sw-condition-line-item-of-type.html.twig
@@ -9,7 +9,7 @@
                    name="lineItemType"
                    itemValueKey="value"
                    displayName="label"
-                   :required="true"
+                   required
                    :store="lineItemTypeStore"
                    v-model="condition.value.lineItemType"
                    class="field--main">
