--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-line-item-with-quantity/sw-condition-line-item-with-quantity.html.twig
@@ -3,7 +3,7 @@
         <sw-select :store="getProductStore()"
                    name="id"
                    :id="condition.id"
-                   :required="true"
+                   required
                    class="field--main has--arrow"
                    v-model="condition.value.id">
         </sw-select>
