--- a/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/page/sw-settings-rule-detail/sw-settings-rule-detail.html.twig
@@ -42,6 +42,7 @@
                                           :label="$tc('sw-settings-rule.detail.labelName')"
                                           :placeholder="$tc('sw-settings-rule.detail.placeholderName')"
                                           validation="required"
+                                          required
                                           v-model="rule.name">
                                 </sw-field>
                             {% endblock %}
@@ -51,6 +52,7 @@
                                           :label="$tc('sw-settings-rule.detail.labelPriority')"
                                           :placeholder="$tc('sw-settings-rule.detail.placeholderPriority')"
                                           validation="required"
+                                          required
                                           v-model="rule.priority">
                                 </sw-field>
                             {% endblock %}
