--- a/Resources/administration/src/module/sw-settings-shipping/component/sw-price-rule-modal/sw-price-rule-modal.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/component/sw-price-rule-modal/sw-price-rule-modal.html.twig
@@ -4,6 +4,7 @@
                   :label="$tc('sw-settings-shipping.priceRuleModal.labelPrice')"
                   :placeholder="$tc('sw-settings-shipping.priceRuleModal.placeholderPrice')"
                   validation="required"
+                  required
                   v-model="currentPriceRule.price">
             <template #suffix>
                 {{ currencySuffix }}
