--- a/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/component/sw-settings-shipping-price-matrix/sw-settings-shipping-price-matrix.html.twig
@@ -122,7 +122,7 @@
                     {% block sw_settings_shipping_price_matrix_empty_property_store %}
                         <sw-select :store="propertyStore"
                                    size="small"
-                                   :required="true"
+                                   required
                                    :value="priceGroup.calculation"
                                    :showSearch="false"
                                    :placeholder="$tc('sw-settings-shipping.priceMatrix.selectProperty')"
