--- a/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
+++ b/Resources/administration/src/module/sw-customer/component/sw-customer-base-form/sw-customer-base-form.html.twig
@@ -7,6 +7,7 @@
                     <sw-select-field :label="$tc('sw-customer.baseForm.labelSalutation')"
                                      v-model="customer.salutationId"
                                      :placeholder="$tc('sw-customer.baseForm.placeholderSalutation')"
+                                     required
                                      validation="required">
                         <option v-for="salutation in salutations" :key="salutation.id" :value="salutation.id">
                             {{ salutation.translated.displayName }}
@@ -24,6 +25,7 @@
 
             {% block sw_customer_base_form_first_name_field %}
                 <sw-field type="text"
+                          required
                           :label="$tc('sw-customer.baseForm.labelFirstName')"
                           v-model="customer.firstName">
                 </sw-field>
@@ -31,6 +33,7 @@
 
             {% block sw_customer_base_form_last_name_field %}
                 <sw-field type="text"
+                          required
                           :label="$tc('sw-customer.baseForm.labelLastName')"
                           v-model="customer.lastName">
                 </sw-field>
@@ -38,6 +41,7 @@
 
             {% block sw_customer_base_form_email_field %}
                 <sw-field type="text"
+                          required
                           :label="$tc('sw-customer.baseForm.labelEmail')"
                           v-model="customer.email">
                 </sw-field>
@@ -45,6 +49,7 @@
 
             {% block sw_customer_base_form_customer_group_field %}
                 <sw-field type="select"
+                          required
                           :label="$tc('sw-customer.baseForm.labelCustomerGroup')"
                           :placeholder="$tc('sw-customer.baseForm.placeholderCustomerGroup')"
                           v-model="customer.groupId">
@@ -58,6 +63,7 @@
 
             {% block sw_customer_base_form_sales_channel_field %}
                 <sw-field type="select"
+                          required
                           :label="$tc('sw-customer.baseForm.labelSalesChannel')"
                           :placeholder="$tc('sw-customer.baseForm.placeholderSalesChannel')"
                           @change="swCustomerCreateOnChangeSalesChannel"
@@ -72,6 +78,7 @@
 
             {% block sw_customer_base_form_payment_method_field %}
                 <sw-field type="select"
+                          required
                           :label="$tc('sw-customer.baseForm.labelPaymentMethod')"
                           :placeholder="$tc('sw-customer.baseForm.placeholderPaymentMethod')"
                           v-model="customer.defaultPaymentMethodId">
