--- a/Resources/administration/src/module/sw-property/component/sw-property-detail-base/sw-property-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-property/component/sw-property-detail-base/sw-property-detail-base.html.twig
@@ -2,7 +2,12 @@
     <sw-card :title="$tc('sw-property.detail.cardTitleGroupInfo')" :isLoading="group.isLoading">
 
         {% block sw_property_detail_base_name %}
-            <sw-field v-model="group.name" type="text" validation="required" :label="$tc('sw-property.detail.labelName')" :placeholder="$tc('sw-property.detail.placeholderName')" />
+            <sw-field v-model="group.name"
+                      type="text"
+                      required
+                      validation="required"
+                      :label="$tc('sw-property.detail.labelName')"
+                      :placeholder="$tc('sw-property.detail.placeholderName')" />
         {% endblock %}
 
         {% block sw_property_detail_base_description %}
@@ -12,13 +17,13 @@
         {% block sw_property_detail_sorting_display_container %}
             <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0 30px">
                 {% block sw_property_detail_display_type %}
-                    <sw-field v-model="group.displayType" validation="required" type="select" :label="$tc('sw-property.detail.labelDisplayType')" >
+                    <sw-field v-model="group.displayType" validation="required" required type="select" :label="$tc('sw-property.detail.labelDisplayType')" >
                         <option slot="options" v-for="option in displayTypes" :key="option.value" :value="option.value">{{ option.label }}</option>
                     </sw-field>
                 {% endblock %}
 
                 {% block sw_property_detail_sorting_type %}
-                    <sw-field v-model="group.sortingType" validation="required" type="select" :label="$tc('sw-property.detail.labelSortingType')" >
+                    <sw-field v-model="group.sortingType" validation="required" required type="select" :label="$tc('sw-property.detail.labelSortingType')" >
                         <option slot="options" v-for="option in sortingTypes" :key="option.value" :value="option.value">{{ option.label }}</option>
                     </sw-field>
                 {% endblock %}
