--- a/Resources/administration/src/module/sw-property/component/sw-property-option-detail/sw-property-option-detail.html.twig
+++ b/Resources/administration/src/module/sw-property/component/sw-property-option-detail/sw-property-option-detail.html.twig
@@ -1,7 +1,7 @@
 {% block sw_property_option_detail %}
     <sw-modal @modal-close="onCancel" :title="currentOption.name ? currentOption.name : $tc('sw-property.detail.textOptionHeadline')">
         {% block sw_property_option_detail_name %}
-            <sw-field v-model="currentOption.name" type="text" validation="required" :label="$tc('sw-property.detail.labelOptionName')" :placeholder="$tc('sw-property.detail.placeholderOptionName')" ></sw-field>
+            <sw-field v-model="currentOption.name" type="text" validation="required" required :label="$tc('sw-property.detail.labelOptionName')" :placeholder="$tc('sw-property.detail.placeholderOptionName')" ></sw-field>
         {% endblock %}
 
         {% block sw_property_option_detail_position %}
