--- a/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-country/page/sw-settings-country-detail/sw-settings-country-detail.html.twig
@@ -54,6 +54,7 @@
 
                             {% block sw_settings_country_detail_content_field_name %}
                                 <sw-field type="text"
+                                          required
                                           :label="$tc('sw-settings-country.detail.labelName')"
                                           :placeholder="placeholder(country, 'name', $tc('sw-settings-country.detail.placeholderName'))"
                                           v-model="country.name">
