--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-date-range/sw-condition-date-range.html.twig
@@ -5,7 +5,7 @@
                    itemValueKey="value"
                    displayName="label"
                    :store="selectValues"
-                   :required="true"
+                   required
                    v-model="useTime"
                    class="field--main has--arrow">
         </sw-select>
