--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-operator-select/sw-condition-operator-select.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-operator-select/sw-condition-operator-select.html.twig
@@ -3,7 +3,7 @@
                itemValueKey="identifier"
                displayName="label"
                :store="operators"
-               :required="true"
+               required
                v-model="operatorValue"
                class="sw-condition-operator-select has--arrow"
                @input="$emit('input', $event)">
