--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -54,6 +54,7 @@
                         <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0px 30px">
                             {% block sw_settings_shipping_detail_base_content_field_name %}
                                 <sw-field type="text"
+                                          required
                                           :label="$tc('sw-settings-shipping.detail.labelName')"
                                           :placeholder="placeholder(shippingMethod, 'name', $tc('sw-settings-shipping.detail.placeholderName'))"
                                           v-model="shippingMethod.name">
@@ -102,7 +103,7 @@
                                        :label="$tc('sw-settings-shipping.detail.labelDeliveryTime')"
                                        v-model="shippingMethod.deliveryTimeId"
                                        id="deliveryTime"
-                                       :required="true"
+                                       required
                                        sortField="unit,name"
                                        class="sw-settings-shipping-detail__delivery-time">
                             </sw-select>
@@ -120,7 +121,7 @@
                         {% block sw_settings_shipping_detail_top_rule_select %}
                             <sw-select-rule-create :ruleId="shippingMethod.availabilityRuleId"
                                                    :ruleFilter="ruleFilter"
-                                                   :required="true"
+                                                   required
                                                    class="sw-settings-shipping-detail__top-rule"
                                                    @save-rule="onSaveRule">
                             </sw-select-rule-create>
