--- a/Resources/administration/src/module/sw-order/component/sw-order-document-settings-storno-modal/sw-order-document-settings-storno-modal.html.twig
+++ b/Resources/administration/src/module/sw-order/component/sw-order-document-settings-storno-modal/sw-order-document-settings-storno-modal.html.twig
@@ -18,8 +18,7 @@
         </sw-select-field>
     {% endblock %}
         {% block sw_order_document_settings_modal_form_document_date %}
-            <sw-datepicker v-if="documentConfig.documentDate"
-                           dateType="date"
+            <sw-datepicker dateType="date"
                            :label="$tc('sw-order.documentModal.labelDocumentDate')"
                            v-model="documentConfig.documentDate">
             </sw-datepicker>
