NTR - Fix subline translation of sw-empty-states

--- a/Resources/administration/src/app/component/base/sw-empty-state/sw-empty-state.html.twig
+++ b/Resources/administration/src/app/component/base/sw-empty-state/sw-empty-state.html.twig
@@ -24,7 +24,7 @@
                         <slot>
                             {% block sw_empty_state_slot_default %}
                                 <div class="sw-empty-state__description-content"
-                                     v-html="$sanitize($tc(moduleDescription))">
+                                     v-html="$sanitize(moduleDescription)">
                                 </div>
                             {% endblock %}
                         </slot>
